--- a/BranicBlast/package.json
+++ b/BranicBlast/package.json
@@ -1,6 +1,7 @@
 {
   "name": "branicblast",
   
+  "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -16,7 +17,7 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
+    
     "pg": "^8.11.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
